# xqasem

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
examples/: basic_usage.py
scripts/: run_parser.py  smoke_test_languages.py
tests/: test_argument_correction.py  test_output_parsing.py
xqasem/: __init__.py  argument_correction.py  argument_detection.py  cli.py  presets.py  xqasem_parsing.py
