[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xqasem"
version = "0.1.0"
description = "Cross-lingual QASem parser for predicate-centered question-answer structures."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "XQASem contributors" }
]
dependencies = [
  "torch",
  "transformers",
  "peft",
  "accelerate",
  "bitsandbytes",
  "pandas",
  "spacy",
  "spacy-stanza",
  "stanza",
  "tqdm",
]

[project.optional-dependencies]
dev = [
  "pytest",
]

[project.scripts]
xqasem-parse = "xqasem.cli:main"

[tool.setuptools.packages.find]
include = ["xqasem*"]
