[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xqasem"
version = "0.1.2"
description = "Cross-lingual QASem parser for predicate-centered question-answer structures."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "Jonathan Davidov" }
]
keywords = ["qasem", "qa-srl", "semantic-role-labeling", "nlp", "multilingual"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Text Processing :: Linguistic",
]
dependencies = [
  "torch",
  "transformers",
  "peft",
  "accelerate",
  "bitsandbytes",
  "pandas",
  "spacy",
  "spacy-stanza",
  "stanza",
  "tqdm",
]

[project.optional-dependencies]
dev = [
  "build",
  "pytest",
  "twine",
]

[project.scripts]
xqasem-parse = "xqasem.cli:main"

[project.urls]
Homepage = "https://github.com/JohnnieDavidov/xqasem"
Repository = "https://github.com/JohnnieDavidov/xqasem"
Paper = "https://aclanthology.org/2026.eacl-long.112/"

[tool.setuptools.packages.find]
include = ["xqasem*"]
